# Playdate_Api_SDL2

./: .gitignore  LICENSE  Makefile  README.md  build.sh
build_platforms/: emscripten.mk  funkey-s.mk  msys_mingw.mk  rg35xx_plus_batocera.mk  rg35xx_plus_batocera_aarch64.mk  trimui_smart_pro.mk
html/: .htaccess  index.html
src/srcstub/: CInput.c  CInput.cpp  CInput.h  debug.cpp  debug.h  defines.h  gamestub.c  gamestub.cpp  gamestub.h  gamestubcallbacks.h  pd_api.h  pd_api_display.c  pd_api_display.cpp  pd_api_file.c  pd_api_file.cpp  pd_api_gfx.c  pd_api_gfx.cpp  pd_api_json.cpp  pd_api_lua.cpp  pd_api_scoreboards.cpp  pd_api_sound.c  pd_api_sound.cpp  pd_api_sprite.cpp  pd_api_sys.c  pd_api_sys.cpp  pd_menu.cpp  pd_menu.h  pdxinfo_parser.cpp  pdxinfo_parser.h  sprite.cpp  sprite.h  tilt_settings.h
src/srcstub/bump/: .gcc-flags.json  .gitignore  CMakeLists.txt  Collision.hpp  CollisionResponses.hpp  Grid.hpp  LICENSE  README.txt  Rectangle.hpp  Utilities.hpp  World.hpp  hump.hpp
src/srcstub/bump/plugin/math/: vec2.hpp
src/srcstub/bump/plugin/util/: UserData.hpp
src/srcstub/bump/src/: CollisionResponse.cpp  Grid.cpp  Rectangle.cpp  World.cpp
src/srcstub/gfx_primitives_surface/: SDL_gfxPrimitivesSurface.cpp  SDL_gfxPrimitivesSurface.h
src/srcstub/nlohmann_json/: README.txt
src/srcstub/pd_api/: pd_api_gfx.h  pd_api_json.h  pd_api_lua.h  pd_api_sound.h  pd_api_sprite.h  pd_api_sys.h
src/srcstub/sdl_rotate/: SDL_rotate.cpp  SDL_rotate.h
